Fix check alignment, add back local storage

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,5 @@
-.checked-parent {
-    position: relative;
-    height: 150px;
-    z-index: 0;
-}
-
-.vid-img {
-    width: 100%;
-    height: 100%;
-}
-
 .checked-img {
-    position: absolute;
     z-index: 1;
-    bottom: 10px;
-    left: 10px;
+    margin-top: -36px;
+    cursor: pointer;
 }
